[package]
name = "actor_primitives"
description = "Core primitives for actor development and support for HC-compatible actors"
version = "9.0.0-alpha.1"
license = "MIT OR Apache-2.0"
authors = ["ConsensusLab", "Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/builtin-actors"

[dependencies]
fil_actors_runtime = { version = "9.0.0-alpha.1", path = "../runtime", features = ["fil-actor"] }
fvm_shared = { version = "0.8.0", default-features = false }
fvm_ipld_hamt = "0.5.1"
num-traits = "0.2.14"
num-derive = "0.3.3"
log = "0.4.14"
indexmap = { version = "1.8.0", features = ["serde-1"] }
cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
integer-encoding = { version = "3.0.3", default-features = false }
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
anyhow = "1.0.56"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.2"
